@@ -3,7 +3,7 @@ include(OptionsWindows)
 add_definitions(-D_CE_CRT_ALLOW_WIN_MINMAX)
 add_definitions(-DWTF_USE_WCHAR_UNICODE=1)
 add_definitions(-DWTF_USE_WININET=1)
-add_definitions(-DWTF_CPU_ARM_TRADITIONAL -DWINCEBASIC)
+add_definitions(-DWINCEBASIC)
 add_definitions(-DJS_NO_EXPORT)
 add_definitions(-DHAVE_ACCESSIBILITY=0)
 add_definitions(-DJSCCOLLECTOR_VIRTUALMEM_RESERVATION=0x200000)
