@@ -1,3 +1,14 @@
+2013-03-27  Patrick Gansterer  <paroga@webkit.org>
+
+        Set WTF_ARM_ARCH_VERSION to correct value when used with MSVC
+        https://bugs.webkit.org/show_bug.cgi?id=113436
+
+        Reviewed by Benjamin Poulain.
+
+        The Microsoft compiler defines _M_ARM with used ARM version.
+
+        * wtf/Platform.h:
+
 2013-03-27  Allan Sandfeld Jensen  <allan.jensen@digia.com>
 
         Support C++11 static_assert
